...
	<string name="rate">Rate</string>
	<string name="update_rating">Update rating</string>
	<string name="delete_rating">Delete rating</string>
	<string name="rating_thanks">Thanks for rating!</string>
	<string name="rating_updated">Rating updated!</string>
	<string name="rating_removed">Rating removed</string>
	<string name="add_to_favorites">Add to favorites</string>
	<string name="remove_from_favorites">Remove from favorites</string>
</resources>

