...
 * This is an example of an ObjectMother that can be used in both Unit and Android UI tests.
 * As such it would go into its own module in a normal project.
 */
object TvMother {

	fun createTvList() = listOf(
		createDefaultTv(id = 0, name = "name1", overview = "Overview 0"),
		createDefaultTv(id = 1, name = "name2"),
		createDefaultTv(id = 2, name = "name3", overview = "Overview 2"),
		createDefaultTv(id = 3, name = "name4", overview = "Overview 3"),
		createDefaultTv(id = 4, name = "name5"),
		createDefaultTv(id = 5, name = "name6"),
		createDefaultTv(id = 6, name = "name6"),
...
		posterPath = posterPath,
		backdropPath = backdropPath
	)

	fun createTvDetail(
		id: Int = 0,
		title: String = "Brazil",
		overview: String = "Best film ever",
		voteAverage: Float = 8.7800f,
		posterPath: String = "app1",
		backdropPath: String = ""
	): TvDetail = TvDetail(
		id = id,
...
