package com.zsoltbertalan.flickslate

import android.content.Intent
import androidx.compose.ui.semantics.SemanticsActions
import androidx.compose.ui.test.assertAny
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.hasTestTag
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.junit4.AndroidComposeTestRule
import androidx.compose.ui.test.onAllNodesWithText
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.onRoot
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollToNode
import androidx.compose.ui.test.performSemanticsAction
import androidx.compose.ui.test.printToLog
import androidx.test.core.app.ApplicationProvider
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.zsoltbertalan.flickslate.main.FlickSlateActivity
import com.zsoltbertalan.flickslate.movies.domain.model.MovieDetailMother
import com.zsoltbertalan.flickslate.shared.ui.compose.waitUntilAtLeastOneExistsCopy
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4::class)
class MovieDetailsTest {

	@get:Rule
	val composeTestRule = AndroidComposeTestRule<ActivityScenarioRule<FlickSlateActivity>, FlickSlateActivity>(
		activityRule = ActivityScenarioRule(
			Intent(
				ApplicationProvider.getApplicationContext(),
				FlickSlateActivity::class.java
			).apply {
				putExtra("isRunningTest", true)
			}
		),
		activityProvider = { rule ->
			var activity: FlickSlateActivity? = null
			rule.scenario.onActivity { activity = it }
			activity!!
		}
	)

	private lateinit var fakeAccountRepository: FakeAccountRepository
	private lateinit var fakeMoviesRepository: FakeMoviesRepository

	@Before
	fun setUp() {
		composeTestRule.activityRule.scenario.onActivity { activity ->
			val testOverrides = activity.application.asTestOverrides()
			fakeAccountRepository = testOverrides.fakeAccountRepository
			fakeMoviesRepository = testOverrides.fakeMoviesRepository
		}
	}

	private fun navigateToMovieDetails() {
		composeTestRule.waitUntilAtLeastOneExistsCopy(hasTestTag("MovieColumn"), 1000L)
		composeTestRule.onNodeWithText("name1", ignoreCase = true).performClick()
		composeTestRule.waitUntilAtLeastOneExistsCopy(hasText("Brazil"), 5000L)
	}

	@Test
	fun showMovies() {
		with(composeTestRule) {
			onRoot(useUnmergedTree = true).printToLog("showMovies")

			waitUntilAtLeastOneExistsCopy(hasTestTag("MovieColumn"), 1000L)
			onNodeWithText("name1", useUnmergedTree = true).assertExists()
		}
	}

	@Test
	fun showMovieDetails() {
		navigateToMovieDetails()
		with(composeTestRule) {
			onAllNodesWithText("Brazil", useUnmergedTree = true).assertAny(hasText("Brazil"))
			onNodeWithText("Movies", useUnmergedTree = true).assertDoesNotExist()

			composeTestRule.activityRule.scenario.onActivity { activity ->
				activity.onBackPressedDispatcher.onBackPressed()
			}

			onNodeWithText("Movies", useUnmergedTree = true).assertExists()
		}
	}

	@Test
	fun rateMovie_whenLoggedIn_showsOnlyRateButton() {
		fakeAccountRepository.isLoggedIn = true
		fakeMoviesRepository.movieDetail = MovieDetailMother.createMovieDetail()

		navigateToMovieDetails()

		with(composeTestRule) {
			onNodeWithTag("Movie Detail Column").performScrollToNode(hasTestTag("Rate Button"))

			onNodeWithTag("Rate Button").assertIsDisplayed()
			onNodeWithTag("Delete Rating Button").assertIsNotDisplayed()
			onNodeWithText("Update Rating").assertIsNotDisplayed()
		}
	}

	@Test
	fun rateMovie_whenLoggedInAndRated_showsRating() {
		fakeAccountRepository.isLoggedIn = true
		fakeMoviesRepository.movieDetail = MovieDetailMother.createMovieDetail()

		navigateToMovieDetails()

		with(composeTestRule) {
			onNodeWithTag("Movie Detail Column").performScrollToNode(hasTestTag("Rate Button"))
			onNodeWithTag("Rate Button").performClick()
			onNodeWithTag("Movie Detail Column").performScrollToNode(hasText("Image gallery"))

			waitUntilAtLeastOneExistsCopy(hasTestTag("Rating Text"), 5000L)
			onNodeWithTag("Rating Text").assertIsDisplayed()
			onNodeWithTag("Delete Rating Button").assertIsDisplayed()
			onNodeWithText("Update Rating", ignoreCase = true).assertIsDisplayed()
		}
	}

	@Test
	fun rateMovie_whenMovieAlreadyRated_showsRating() {
		fakeAccountRepository.isLoggedIn = true
		fakeMoviesRepository.movieDetail = MovieDetailMother.createMovieDetail().copy(personalRating = 7.0f)

		navigateToMovieDetails()

		with(composeTestRule) {
			onNodeWithTag("Movie Detail Column").performScrollToNode(hasTestTag("Rating Text"))

			onNodeWithTag("Rating Text").assertIsDisplayed()
			onNodeWithText("Your rating: 7.0").assertIsDisplayed()

			onNodeWithTag("Movie Detail Column").performScrollToNode(hasText("Image gallery"))

			waitUntilAtLeastOneExistsCopy(hasTestTag("Delete Rating Button"), 5000L)
			onNodeWithTag("Delete Rating Button").assertIsDisplayed()
			onNodeWithText("Update Rating", ignoreCase = true).assertIsDisplayed()
		}
	}

	@Test
	fun rateMovie_whenLoggedOut_ratingSectionIsNotVisible() {
		fakeAccountRepository.isLoggedIn = false

		navigateToMovieDetails()

		with(composeTestRule) {
			onNodeWithTag("Rate this movie title").assertDoesNotExist()
		}
	}

	@Test
	fun changeMovieRating_whenAlreadyRated_updatesRating() {
		fakeAccountRepository.isLoggedIn = true
		fakeMoviesRepository.movieDetail = MovieDetailMother.createMovieDetail().copy(personalRating = 7.0f)

		navigateToMovieDetails()

		with(composeTestRule) {
			onNodeWithTag("Movie Detail Column").performScrollToNode(hasTestTag("Rating Text"))

			onNodeWithTag("Rating Text").assertIsDisplayed()

			onNodeWithTag("Rating Slider").performSemanticsAction(SemanticsActions.SetProgress) { it(9.0f) }

			onNodeWithTag("Rate Button").performClick()
			onNodeWithText("Your rating: 9.0").assertIsDisplayed()
		}
	}

	@Test
	fun deleteMovieRating_whenAlreadyRated_removesRating() {
		fakeAccountRepository.isLoggedIn = true
		fakeMoviesRepository.movieDetail = MovieDetailMother.createMovieDetail().copy(personalRating = 7.0f)

		navigateToMovieDetails()

		with(composeTestRule) {
			onNodeWithTag("Movie Detail Column").performScrollToNode(hasTestTag("Delete Rating Button"))
			onNodeWithTag("Delete Rating Button").assertIsDisplayed()
			onNodeWithTag("Delete Rating Button").performClick()
			onNodeWithText("Your rating: 7.0").assertDoesNotExist()
		}
	}

	@Test
	fun favoriteMovie_whenLoggedOut_favoritesButtonIsNotVisible() {
		fakeAccountRepository.isLoggedIn = false

		navigateToMovieDetails()

		with(composeTestRule) {
			onNodeWithTag("Favorite Button").assertDoesNotExist()
		}
	}

	@Test
	fun favoriteMovie_whenLoggedInAndNotFavorited_canFavoriteAndUnfavorite() {
		fakeAccountRepository.isLoggedIn = true
		fakeMoviesRepository.movieDetail = MovieDetailMother.createMovieDetail().copy(favorite = false)

		navigateToMovieDetails()

		with(composeTestRule) {
			onNodeWithTag("Movie Detail Column").performScrollToNode(hasTestTag("Favorite Button"))
			onNodeWithTag("Favorite Button").assertIsDisplayed()
			onNodeWithText("Add to favorites", ignoreCase = true).assertIsDisplayed()

			onNodeWithTag("Favorite Button").performClick()
			waitUntilAtLeastOneExistsCopy(hasText("Remove from favorites"), 5000L)
			onNodeWithText("Remove from favorites", ignoreCase = true).assertIsDisplayed()

			onNodeWithTag("Favorite Button").performClick()
			waitUntilAtLeastOneExistsCopy(hasText("Add to favorites"), 5000L)
			onNodeWithText("Add to favorites", ignoreCase = true).assertIsDisplayed()
		}
	}

}
